Fixed bug #41063 (chdir doesn't like root paths).